test/statements/manage/MapGuardLifetimes2.good
MapGuardLifetimes2.chpl:4: In function 'makeGuard':
MapGuardLifetimes2.chpl:10: error: Scoped variable cannot be returned
MapGuardLifetimes2.chpl:5: note: consider scope of m
